--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
   </label>
   <input type="file" id="pdfFile" accept="application/pdf" />
   <div id="output">Text akan muncul di sini...</div>
-  <a id="waLink" href="#" target="_blank" style="display: none; margin-top: 15px; display: inline-block; background: #25d366; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">📤 Kirim ke WhatsApp</a>
+  <a id="waLink" href="#" target="_blank" style="
+  background: #25d366;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+">📤 Kirim ke WhatsApp</a>
+
 <br>
   <button id="copyBtn">Copy</button>
    
