--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
   <nav style="margin-bottom: 20px; text-align:center; color: #007bff;">
     <a href="index.html" style="color: #007bff; text-decoration;">Extract PDF</a> |
+    <a href="formserahterima.html" style="color: #007bff; text-decoration;">Buat Form Serah Terima</a> |
     <a href="merge.html" style="color: #007bff; text-decoration;">Merge PDF</a>
-  </nav>
+ </nav>
   
 
   <h1>
@@ -29,18 +30,9 @@
     <span class="material-icons">upload_file</span> Pilih File PDF
   </label>
   <input type="file" id="pdfFile" accept="application/pdf" />
+  <br>
   <div id="output">Text akan muncul di sini...</div>
-  <a id="waLink" href="#" target="_blank" style="
-  background: #25d366;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: bold;
-  display: inline-block;
-">📤 Kirim ke WhatsApp</a>
 
-<br>
   <button id="copyBtn">Copy</button>
    
   
