--- a/merge.html
+++ b/merge.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Report CM Kanpus</title>
+  <title>Merge PDF CM Kanpus</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ✅ Favicon ditambahkan di sini -->
@@ -15,8 +15,9 @@
 <body>
   <nav style="margin-bottom: 20px; text-align:center; color: #007bff;">
     <a href="index.html" style="color: #007bff; text-decoration;">Extract PDF</a> |
+    <a href="formserahterima.html" style="color: #007bff; text-decoration;">Buat Form Serah Terima</a> |
     <a href="merge.html" style="color: #007bff; text-decoration;">Merge PDF</a>
-  </nav>
+ </nav>
 
   <h1 style="text-align:center;">🔗 Merge PDF Kalian Disini</h1>
   <h4 style="text-align:center;">Pilih File PDF Yang Ingin Kalian Gabung Menjadi Satu File !</h4>
