--- a/formserahterima.html
+++ b/formserahterima.html
@@ -8,6 +8,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script src="formserahterima.js" defer></script>
+  <!-- ✅ Favicon ditambahkan di sini -->
+  <link rel="icon" href="https://api.iconify.design/mdi:file-document.svg" type="image/svg+xml" />
+
+  <!-- Style dan ikon -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: Calibri, sans-serif;
@@ -54,6 +60,11 @@
   </style>
 </head>
 <body>
+   <nav style="margin-bottom: 20px; text-align:center; color: #007bff;">
+    <a href="index.html" style="color: #007bff; text-decoration;">Extract PDF</a> |
+    <a href="formserahterima.html" style="color: #007bff; text-decoration;">Buat Form Serah Terima</a> |
+    <a href="merge.html" style="color: #007bff; text-decoration;">Merge PDF</a>
+ </nav>
   <h1>Form Tanda Terima CM</h1>
 
   <label for="tanggalSerah">Input Tanggal Serah Terima:</label>
