--- a/formserahterima.html
+++ b/formserahterima.html
@@ -10,6 +10,8 @@
 
   <!-- Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <!-- ✅ Favicon ditambahkan di sini -->
   <link rel="icon" href="https://api.iconify.design/mdi:file-document.svg" type="image/svg+xml" />
