--- a/formserahterima.html
+++ b/formserahterima.html
@@ -111,6 +111,11 @@
   <button id="downloadBtn" style="display:none;">Download PDF</button>
 
   <div id="tabelHasil"></div>
+  <div id="exportArea">
+  <h2>FORM TANDA TERIMA CM</h2>
+  <table>...</table>
+</div>
+
 
   <!-- Skrip Utama -->
   <script src="formserahterima.js"></script>
