--- a/formserahterima.html
+++ b/formserahterima.html
@@ -1,37 +1,92 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="color-scheme" content="light dark" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="color-scheme" content="light only">
   <title>Form Tanda Terima CM</title>
 
-  <!-- Libs -->
+  <!-- PDF.js dan html2pdf.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Calibri, sans-serif;
+      background-color: #fff;
+      color: #000;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    input[type="date"] {
+      padding: 8px 12px;
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+
+    .upload-label {
+      display: inline-block;
+      background-color: #007bff;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    input[type="file"] {
+      display: none;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      padding: 10px 16px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin: 10px 5px;
+    }
+
+    #fileCount {
+      margin-left: 10px;
+      font-weight: bold;
+    }
+
+    #tabelHasil {
+      margin-top: 30px;
+    }
+
+    @media (max-width: 768px) {
+      table {
+        min-width: 600px;
+      }
+    }
+  </style>
 </head>
 <body>
-
   <h1>Form Tanda Terima CM</h1>
 
-  <div class="input-row">
-    <label for="tanggalSerah">Input Tanggal Serah Terima:</label>
-    <input type="date" id="tanggalSerah" />
-  </div>
+  <label for="tanggalSerah">Tanggal Serah Terima:</label>
+  <input type="date" id="tanggalSerah">
 
+  <br><br>
   <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
-  <input type="file" id="multiPdf" multiple accept="application/pdf" />
+  <input type="file" id="multiPdf" multiple accept="application/pdf">
   <span id="fileCount"></span>
 
-  <br />
+  <br>
   <button onclick="prosesFile()">Proses</button>
-  <button id="downloadBtn" style="display:none;">Download PDF</button>
+  <button id="downloadBtn" style="display:none">Download PDF</button>
 
   <div id="tabelHasil"></div>
 
-  <script src="formserahterima.js"></script>
 </body>
 </html>
