--- a/formserahterima.html
+++ b/formserahterima.html
@@ -83,10 +83,7 @@
   <span id="fileCount"></span>
 
   <br>
-  <button onclick="prosesFile()">Proses</button>
+  <button id="prosesBtn">Proses</button>
   <button id="downloadBtn" style="display:none">Download PDF</button>
 
   <div id="tabelHasil"></div>
-
-</body>
-</html>
