--- a/formserahterima.html
+++ b/formserahterima.html
@@ -12,12 +12,23 @@
 
   <!-- Styles -->
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Calibri, sans-serif;
       background-color: #fff;
       color: #000;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
       text-align: center;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 20px;
     }
 
     h1 {
@@ -29,6 +40,8 @@
       padding: 8px 12px;
       font-size: 16px;
       margin-bottom: 10px;
+      width: 100%;
+      max-width: 280px;
     }
 
     .upload-label {
@@ -38,6 +51,7 @@
       padding: 10px 16px;
       border-radius: 6px;
       cursor: pointer;
+      margin-top: 10px;
     }
 
     input[type="file"] {
@@ -56,37 +70,45 @@
     }
 
     #fileCount {
-      margin-left: 10px;
+      margin-left: 8px;
       font-weight: bold;
+      display: inline-block;
     }
 
     #tabelHasil {
       margin-top: 30px;
+      overflow-x: auto;
     }
 
     @media (max-width: 768px) {
+      .container {
+        padding: 12px;
+      }
+
       table {
-        min-width: 600px;
+        font-size: 12px;
       }
     }
   </style>
 </head>
 <body>
-  <h1>Form Tanda Terima CM</h1>
+  <div class="container">
+    <h1>Form Tanda Terima CM</h1>
 
-  <label for="tanggalSerah">Tanggal Serah Terima:</label>
-  <input type="date" id="tanggalSerah">
+    <label for="tanggalSerah">Tanggal Serah Terima:</label><br>
+    <input type="date" id="tanggalSerah">
 
-  <br><br>
-  <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
-  <input type="file" id="multiPdf" multiple accept="application/pdf">
-  <span id="fileCount"></span>
+    <br>
+    <label for="multiPdf" class="upload-label">📄 Pilih File PDF</label>
+    <input type="file" id="multiPdf" multiple accept="application/pdf">
+    <span id="fileCount"></span>
 
-  <br>
-  <button id="prosesBtn">Proses</button>
-  <button id="downloadBtn" style="display:none">Download PDF</button>
+    <br>
+    <button id="prosesBtn">Proses</button>
+    <button id="downloadBtn" style="display:none">Download PDF</button>
 
-  <div id="tabelHasil"></div>
+    <div id="tabelHasil"></div>
+  </div>
 
   <script>
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
@@ -106,7 +128,7 @@
           if (/kantor cabang|tanggal|pelapor|jenis perangkat|asset id/i.test(line)) break;
           if (line !== '') collected.push(line);
         }
-        namaUker = collected.join(' ').replace(/^:+\s*/, '').trim();
+        namaUker = collected.join(' ').replace(/^:+\s*/, '').replace(/^\:+/, '').trim();
       }
 
       const tanggalTiketMatch = text.match(/Tanggal Tiket\s*:\s*(\d{2}\/\d{2}\/\d{4})/);
@@ -147,7 +169,7 @@
     function tampilkanTabel() {
       const div = document.getElementById('tabelHasil');
       const html = `<div id="exportArea" style="font-family:Calibri; background:#fff; color:#000;">
-        <h2 style="text-align:center; font-size:22px;">FORM TANDA TERIMA CM</h2>
+        <h2 style="text-align:center; font-size:35px;">FORM TANDA TERIMA CM</h2>
         <table border="1" cellspacing="0" cellpadding="6" style="width:100%;">
           <thead>
             <tr style="font-weight:bold; text-transform:uppercase;">
@@ -167,7 +189,7 @@
           </tbody>
         </table>
         <br>
-        <table border="1" cellspacing="0" cellpadding="6" style="width:100%; text-align:center; table-layout:fixed;">
+        <table border="1" cellspacing="0" cellpadding="20" style="width:100%; text-align:center; table-layout:fixed;">
           <colgroup>
             <col style="width: 33.33%;">
             <col style="width: 33.33%;">
