--- a/formserahterima.html
+++ b/formserahterima.html
@@ -170,7 +170,7 @@
       const div = document.getElementById('tabelHasil');
       const html = `<div id="exportArea" style="font-family:Calibri; background:#fff; color:#000;">
         <h2 style="text-align:center; font-size:35px;">FORM TANDA TERIMA CM</h2>
-        <table border="1" cellspacing="0" cellpadding="6" style="width:100%;">
+        <table border="1" cellspacing="0" cellpadding="20" style="width:100%; text-align:center;">
           <thead>
             <tr style="font-weight:bold; text-transform:uppercase;">
               <th>No.</th>
