--- a/formserahterima.html
+++ b/formserahterima.html
@@ -189,11 +189,11 @@
           </tbody>
         </table>
         <br>
-        <table border="1" cellspacing="0" cellpadding="20" style="width:100%; text-align:center;">
+        <table border="1" cellspacing="0" cellpadding="20" style="width:100%; text-align:center; table-layout:fixed;">
           <colgroup>
-            <col style="width: 33.33%;">
-            <col style="width: 33.33%;">
-            <col style="width: 33.33%;">
+            <col style="width: 33.3%;">
+            <col style="width: 33.3%;">
+            <col style="width: 33.3%;">
           </colgroup>
           <tr>
             <th>TTD TEKNISI</th><th>TTD LEADER</th><th>TTD CALL CENTER</th>
